fixed some issues

--- a/package.json
+++ b/package.json
@@ -4,13 +4,13 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "build-css": "tailwindcss build src/tailwind.css -o public/styles.css",
     "build-css": "tailwindcss build src/tailwind.css -o public/styles.css --watch"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@tailwindcss/forms": "^0.3.2",
     "tailwindcss": "^2.1.1"
   }
 }
